--- a/customer-service/Dockerfile
+++ b/customer-service/Dockerfile
@@ -11,6 +11,7 @@ COPY exchange-service/pom.xml exchange-service/pom.xml
 COPY exchange-generator-service/pom.xml exchange-generator-service/pom.xml
 COPY front-ui-service/pom.xml front-ui-service/pom.xml
 COPY apigw-service/pom.xml apigw-service/pom.xml
+COPY cash-service/pom.xml cash-service/pom.xml
 COPY transfer-service/pom.xml transfer-service/pom.xml
 COPY clients/pom.xml clients/pom.xml
 
