--- a/my-microservices-app/charts/front-ui-service/values.yaml
+++ b/my-microservices-app/charts/front-ui-service/values.yaml
@@ -45,7 +45,7 @@ ingress:
   className: "nginx"
   annotations: {}
   hosts:
-    - host: front-ui.test.local
+    - host: front-ui.prod.local
       paths:
         - path: /
           pathType: Prefix
@@ -77,5 +77,5 @@ tolerations: []
 affinity: {}
 
 config:
-  KEYCLOAK_ISSUER_URL: "http://keycloak.{{ .Release.Namespace }}.svc.cluster.local:8080/realms/bank-realm"
-  KEYCLOAK_SERVER_URL: "http://keycloak.{{ .Release.Namespace }}.svc.cluster.local:8080"
+  KEYCLOAK_ISSUER_URL: "http://keycloak.{{ .Release.Namespace }}.local/realms/bank-realm"
+  KEYCLOAK_SERVER_URL: "http://keycloak.{{ .Release.Namespace }}.local"
