--- a/my-microservices-app/charts/keycloak/templates/deployment.yaml
+++ b/my-microservices-app/charts/keycloak/templates/deployment.yaml
@@ -45,7 +45,7 @@ spec:
                 name: {{ include "keycloak.fullname" . }}-realm-config  # Use the correct name
           env:
             - name: KC_HOSTNAME
-              value: {{ (index .Values.ingress.hosts 0).host }}
+              value: {{ printf "http://%s" (index .Values.ingress.hosts 0).host }}
             - name: KC_HOSTNAME_STRICT_BACKCHANNEL
               value: "false"
             - name: KC_HOSTNAME_BACKCHANNEL_DYNAMIC
