--- a/my-microservices-app/charts/apigw-service/templates/deployment.yaml
+++ b/my-microservices-app/charts/apigw-service/templates/deployment.yaml
@@ -20,6 +20,10 @@ spec:
       labels:
         {{- include "apigw-service.selectorLabels" . | nindent 8 }}
     spec:
+      hostAliases:
+        - ip: "10.1.0.88" # kubectl get pod -n ingress-nginx -o wide
+          hostnames:
+            - "keycloak.prod.local"
       {{- with .Values.imagePullSecrets }}
       imagePullSecrets:
         {{- toYaml . | nindent 8 }}
@@ -68,4 +72,4 @@ spec:
       {{- with .Values.tolerations }}
       tolerations:
         {{- toYaml . | nindent 8 }}
-      {{- end }} 
+      {{- end }}
