#Configured hostAliases in deployment so that the domain name keycloak.prod.local resolves to the internal IP of the ingress-nginx controller (10.1.0.88) To get actual ingress-nginx controller IP address use 'kubectl get pod -n ingress-nginx -o wide'

--- a/my-microservices-app/charts/front-ui-service/values.yaml
+++ b/my-microservices-app/charts/front-ui-service/values.yaml
@@ -45,7 +45,7 @@ ingress:
   className: "nginx"
   annotations: {}
   hosts:
-    - host: front-ui.test.local
+    - host: front-ui.prod.local
       paths:
         - path: /
           pathType: Prefix
