--- a/my-microservices-app/charts/transfer-service/values.yaml
+++ b/my-microservices-app/charts/transfer-service/values.yaml
@@ -77,4 +77,4 @@ tolerations: []
 affinity: {}
 
 config:
-  KEYCLOAK_ISSUER_URL: "http://keycloak.{{ .Release.Namespace }}.svc.cluster.local:8080/realms/bank-realm"
+  KEYCLOAK_ISSUER_URL: "http://keycloak.prod.local/realms/bank-realm"
