--- a/clients/src/main/resources/clients-default.properties
+++ b/clients/src/main/resources/clients-default.properties
@@ -1,6 +1,6 @@
 clients.customer.url=http://localhost:8081
 clients.fraud.url=http://localhost:8082
-clients.notification.url=http://localhost:8083
+#clients.notification.url=http://localhost:8083
 clients.exchange.url=http://localhost:8086
 clients.cash.url=http://localhost:8088
 clients.transfer.url=http://localhost:8089
