--- a/notification-service/pom.xml
+++ b/notification-service/pom.xml
@@ -55,6 +55,18 @@
             <scope>test</scope>
         </dependency>
 
+        <!-- testcontainers -->
+        <dependency>
+            <groupId>org.testcontainers</groupId>
+            <artifactId>junit-jupiter</artifactId>
+            <scope>test</scope>
+        </dependency>
+        <dependency>
+            <groupId>org.testcontainers</groupId>
+            <artifactId>postgresql</artifactId>
+            <scope>test</scope>
+        </dependency>
+
         <!-- kafka -->
         <dependency>
             <groupId>org.springframework.kafka</groupId>
