#apply the reviewer's advice, moving the topic names into application.yml

--- a/cash-service/src/main/resources/application.yml
+++ b/cash-service/src/main/resources/application.yml
@@ -10,6 +10,8 @@ spring:
       retries: 10
       properties:
         spring.json.add.type.headers: false # Disable type headers for simpler JSON serialization
+    topics:
+      cash-notification: cash-notification # Can be overridden with environment variable
   security:
     oauth2:
       resourceserver:
