--- a/transfer-service/src/main/resources/application.yml
+++ b/transfer-service/src/main/resources/application.yml
@@ -10,6 +10,8 @@ spring:
       retries: 10
       properties:
         spring.json.add.type.headers: false # Disable type headers for simpler JSON serialization
+    topics:
+      transfer-notification: transfer-notification # Can be overridden with environment variable
 
   security:
     oauth2:
