--- a/jenkins/Jenkinsfile
+++ b/jenkins/Jenkinsfile
@@ -245,6 +245,9 @@ pipeline {
                 sh """
                 helm upgrade --install kafka oci://registry-1.docker.io/bitnamicharts/kafka \\
                   --namespace prod --create-namespace \\
+                  --set image.registry=docker.io \
+                  --set image.repository=bitnamilegacy/kafka \\
+                  --set image.tag=4.0.0-debian-12-r10 \
                   --set replicaCount=1 \\
                   --set auth.interBrokerProtocol=plaintext \\
                   --set listeners.client.protocol=PLAINTEXT \\
