--- a/my-microservices-app/values.yaml
+++ b/my-microservices-app/values.yaml
@@ -274,6 +274,12 @@ exchange-db:
 kafka:
   enabled: true
   replicaCount: 1
+  # === bitnamilegacy/kafka ===
+  image:
+    registry: docker.io
+    repository: bitnamilegacy/kafka
+    tag: "4.0.0-debian-12-r10"
+    pullPolicy: IfNotPresent
   auth:
     interBrokerProtocol: "plaintext"
   listeners:
@@ -281,3 +287,6 @@ kafka:
       protocol: "PLAINTEXT"
   kraft:
     enabled: true
+  persistence:
+    enabled: true
+    size: 1Gi
