--- a/my-microservices-app/charts/notification-service/values.yaml
+++ b/my-microservices-app/charts/notification-service/values.yaml
@@ -79,3 +79,4 @@ affinity: {}
 config:
   database_url: "jdbc:postgresql://postgres-postgresql.{{ .Release.Namespace }}.svc.cluster.local:5432/mydb"
   database_username: "myuser"
+  KAFKA_BOOTSTRAP_SERVERS: "kafka:9092"
