--- a/my-microservices-app/charts/transfer-service/values.yaml
+++ b/my-microservices-app/charts/transfer-service/values.yaml
@@ -78,3 +78,4 @@ affinity: {}
 
 config:
   KEYCLOAK_ISSUER_URL: "http://keycloak.prod.local/realms/bank-realm"
+  KAFKA_BOOTSTRAP_SERVERS: "kafka:9092"
