--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -99,6 +99,13 @@ services:
       interval: 10s
       timeout: 5s
       retries: 5
+  zipkin:
+    image: openzipkin/zipkin:3.5
+    container_name: zipkin
+    ports:
+      - "9411:9411"
+    networks:
+      - spring
   kafka:
     image: apache/kafka:4.0.0
     container_name: bank-kafka
