--- a/cash-service/src/main/resources/application.yml
+++ b/cash-service/src/main/resources/application.yml
@@ -1,6 +1,8 @@
 server:
   port: 8088
 spring:
+  application:
+    name: cash-service
   kafka:
     producer:
       bootstrap-servers: ${KAFKA_BOOTSTRAP_SERVERS:localhost:9092}
@@ -30,6 +32,9 @@ spring:
 
 # Spring Boot Actuator endpoints
 management:
+  zipkin:
+    tracing:
+      endpoint: ${ZIPKIN_URL:http://zipkin:9411/api/v2/spans}
   endpoints:
     web:
       exposure:
