--- a/front-ui-service/pom.xml
+++ b/front-ui-service/pom.xml
@@ -49,6 +49,16 @@
             <artifactId>resilience4j-retry</artifactId>
         </dependency>
 
+        <!-- Zipkin Tracing -->
+        <dependency>
+            <groupId>io.micrometer</groupId>
+            <artifactId>micrometer-tracing-bridge-brave</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>io.zipkin.reporter2</groupId>
+            <artifactId>zipkin-reporter-brave</artifactId>
+        </dependency>
+
         <!-- clients -->
         <dependency>
             <groupId>com.example</groupId>
