--- a/exchange-generator-service/src/main/resources/application.yml
+++ b/exchange-generator-service/src/main/resources/application.yml
@@ -19,7 +19,7 @@ spring:
 management:
   zipkin:
     tracing:
-      endpoint: ${ZIPKIN_URL:http://zipkin:9411/api/v2/spans}
+      endpoint: ${ZIPKIN_URL:http://localhost:9411/api/v2/spans}
   tracing:
     sampling:
       probability: 1
