--- a/front-ui-service/src/main/resources/application.yml
+++ b/front-ui-service/src/main/resources/application.yml
@@ -33,7 +33,7 @@ keycloak:
 management:
   zipkin:
     tracing:
-      endpoint: ${ZIPKIN_URL:http://zipkin:9411/api/v2/spans}
+      endpoint: ${ZIPKIN_URL:http://localhost:9411/api/v2/spans}
   endpoints:
     web:
       exposure:
